[project]
name = "project1"
version = "0.1.0"
description = ""
authors = [
    {name = "seanquiambao",email = "slquiambao03@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "yapf (>=0.43.0,<0.44.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
